--- a/client/index.html
+++ b/client/index.html
@@ -2,18 +2,16 @@
 <html ng-app="CongressionalStalker">
 <head>
   <title>Discover how your Politicians have Voted!</title>
-  <link rel="stylesheet" type="text/css" href="bower_components/Materialize/bin/materialize.css">
+  <link rel="stylesheet" type="text/css" href="../bower_components/Materialize/bin/materialize.css">
 
 </head>
-<body>
+<body >
+  <div> HI I'm INDEX </div>
+  <div ui-view></div>
+<script type="text/javascript" href="../bower_components/angular/angular.js"></script>
+<script type="text/javascript" href="../bower_components/Materialize/bin/materialize.js"></script>
+<script type="text/javascript" href="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<script type="text/javascript" href="app.js"></script>
 
-  <div class="row">
-    <div class="col s12">This div is 12-columns wide</div>
-    <div class="col s6">This div is 6-columns wide</div>
-    <div class="col s6">This div is 6-columns wide</div>
-  </div>
-
-<script type="text/javascript" href="bower_components/angular/angular.js"></script>
-<script type="text/javascript" href="bower_components/Materialize/bin/materialize.js"></script>
 </body>
 </html>
