--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Discover how your Politicians have Voted!</title>
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="bower_components/Materialize/bin/materialize.css" />
 
 </head>
