--- a/client/index.html
+++ b/client/index.html
@@ -4,18 +4,34 @@
   <title>Discover how your Politicians have Voted!</title>
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="bower_components/Materialize/bin/materialize.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="client/styles.css" />
 
 </head>
 <body ng-app="CongressionalStalker">
+<nav>
+    <div class="nav-wrapper">
+      <a href="#!" class="brand-logo">Logo</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a ui-sref="register"><i class="fa fa-user left"></i>Register</a></li>
+        <li><a ui-sref="login"><i class="fa fa-sign-in left"></i>Login</a></li>
+        <li><a ui-sref="logout"><i class="fa fa-sign-out left"></i>Logout</a></li>
+      </ul>
+    </div>
+  </nav>
+
 
 <div ui-view></div>
-  
+
+<script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script> 
+<script type="text/javascript" src="bower_components/Materialize/bin/materialize.js"></script> 
 <script type="text/javascript" src="bower_components/angular/angular.js"></script>
 <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script type="text/javascript" src="app.js"></script>
 <script type='text/javascript' src='components/results/resultsCtrl.js'></script>
 <script type='text/javascript' src='components/search/searchCtrl.js'></script>
-<script type="text/javascript" src="bower_components/Materialize/bin/materialize.js"></script>
-
+<script type='text/javascript' src='auth/register.js'></script>
+<script type='text/javascript' src='auth/login.js'></script>
+<script type='text/javascript' src='auth/logout.js'></script>
 </body>
 </html>
