--- a/client/auth/login.html
+++ b/client/auth/login.html
@@ -1,23 +1,23 @@
 <div class="col m6">
   <h2>Login</h2>
   <div class="row">
-    <form class="col s4 center-form">
+    <form class="col s4 center-form" ng-submit='login(user)'>
       <div class="row">
         <div class="input-field col s12">
-          <input id="email" type="email" class="validate">
+          <input id="email" type="email" class="validate" ng-model='user.email'>
           <label for="email">Email</label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <input id="pass" type="password" class="validate">
+          <input id="pass" type="password" class="validate" ng-model='user.password'>
           <label for="pass">Password</label>
         </div>
       </div>
       <div class="row">
         <div class="col m12">
           <p class="right-align">
-            <button class="btn btn-large waves-effect waves-light" type="button" name="action">Login</button>
+            <button class="btn btn-large waves-effect waves-light" type="submit" name="action">Login</button>
           </p>
         </div>
       </div>
