--- a/client/index.html
+++ b/client/index.html
@@ -9,13 +9,13 @@
 
 </head>
 <body ng-app="CongressionalStalker">
-<nav>
+<nav ng-controller='AuthCheck'>
     <div class="nav-wrapper">
       <a href="#!" class="brand-logo">Logo</a>
       <ul class="right hide-on-med-and-down">
         <li><a ui-sref="register"><i class="fa fa-user left"></i>Register</a></li>
-        <li><a ui-sref="login"><i class="fa fa-sign-in left"></i>Login</a></li>
-        <li><a ui-sref="logout"><i class="fa fa-sign-out left"></i>Logout</a></li>
+        <li ng-if='!loginCheck()'><a ui-sref="login"><i class="fa fa-sign-in left"></i>Login</a></li>
+        <li ng-if="loginCheck()"><a ui-sref="logout"><i class="fa fa-sign-out left"></i>Logout</a></li>
       </ul>
     </div>
   </nav>
