--- a/client/auth/logout.html
+++ b/client/auth/logout.html
@@ -1,1 +1,1 @@
-<div>you are signed out</div>
+<h3 class='col s12 center-align'>You have been logged out. You'll be redirected to our home page in 3 seconds.</h3>
