--- a/client/auth/register.html
+++ b/client/auth/register.html
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="col m12">
           <p class="right-align">
-            <button class="btn btn-large waves-effect waves-light" type="submit" name="action">Login</button>
+            <button class="btn btn-large waves-effect waves-light" type="submit" name="action">Register</button>
           </p>
         </div>
       </div>
