Used factory for get requests of the congress data. Closed #59.

--- a/client/index.html
+++ b/client/index.html
@@ -33,6 +33,7 @@
 <script type='text/javascript' src='auth/register.js'></script>
 <script type='text/javascript' src='auth/login.js'></script>
 <script type='text/javascript' src='auth/logout.js'></script>
+<script type='text/javascript' src='services/handleRequest.js'></script>
 
 </body>
 </html>
