--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="bower_components/Materialize/bin/materialize.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="client/styles.css" />
+  <link rel="stylesheet" type="text/css" href="styles.css" />
 
 </head>
 <body ng-app="CongressionalStalker">
@@ -27,6 +27,7 @@
 <script type="text/javascript" src="bower_components/Materialize/bin/materialize.js"></script>
 <script type="text/javascript" src="bower_components/angular/angular.js"></script>
 <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<script type="text/javascript" src="bower_components/angular-materialize/src/angular-materialize.js"></script>
 <script type="text/javascript" src="app.js"></script>
 <script type='text/javascript' src='components/results/resultsCtrl.js'></script>
 <script type='text/javascript' src='components/search/searchCtrl.js'></script>
@@ -35,6 +36,7 @@
 <script type='text/javascript' src='auth/logout.js'></script>
 <script type='text/javascript' src='services/handleRequest.js'></script>
 <script type='text/javascript' src='directives/directives.js'></script>
+<script type='text/javascript' src='components/search/byStateCtrl.js'></script>
 
 </body>
 </html>
