Created directive for search. Closed #58."

--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,7 @@
 <script type='text/javascript' src='auth/login.js'></script>
 <script type='text/javascript' src='auth/logout.js'></script>
 <script type='text/javascript' src='services/handleRequest.js'></script>
+<script type='text/javascript' src='directives/directives.js'></script>
 
 </body>
 </html>
