Implemented Search By State without styling

--- a/client/index.html
+++ b/client/index.html
@@ -37,6 +37,8 @@
 <script type='text/javascript' src='services/handleRequest.js'></script>
 <script type='text/javascript' src='directives/directives.js'></script>
 <script type='text/javascript' src='components/search/byStateCtrl.js'></script>
+<script type='text/javascript' src='components/results/byStateResultsCtrl.js'></script>
+
 
 </body>
 </html>
