Search bar hotfix.

--- a/client/directives/searchMember.html
+++ b/client/directives/searchMember.html
@@ -7,5 +7,6 @@
       <button class='center-align col s2 btn waves-effect waves-light'type='submit'>Search<i class="material-icons right">send</i></button>
       <p ng-if='search.person.$invalid && search.person.$dirty'>Not a valid name</p>
     </form>
+    <p class='col s6 offset-s3'>Or you can <a ui-sref='byState'>find congressional members by state</a></p>
   </div>
 </div>
