--- a/client/auth/register.html
+++ b/client/auth/register.html
@@ -1,7 +1,7 @@
-<div class="col m6">
-  <h2>Register</h2>
+<div class="col m6 centered">
+  <h2 class="center-align">Register</h2>
   <div class="row">
-    <form class="col s4 center-form" ng-submit='register(user)'>
+    <form class="col s12" ng-submit='register(user)'>
       <div class="row">
         <div class="input-field col s12">
           <input id="email" type="email" class="validate" ng-model='user.email'>
