--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,7 @@
 <script type="text/javascript" src="bower_components/angular/angular.js"></script>
 <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script type="text/javascript" src="bower_components/angular-materialize/src/angular-materialize.js"></script>
+<script type="text/javascript" src="bower_components/progressbar.js/dist/progressbar.js"></script>
 <script type="text/javascript" src="app.js"></script>
 <script type='text/javascript' src='components/results/resultsCtrl.js'></script>
 <script type='text/javascript' src='components/search/searchCtrl.js'></script>
@@ -38,6 +39,7 @@
 <script type='text/javascript' src='directives/directives.js'></script>
 <script type='text/javascript' src='components/search/byStateCtrl.js'></script>
 <script type='text/javascript' src='components/results/byStateResultsCtrl.js'></script>
+
 
 
 </body>
