Added bioScraper to get detailed bio of the congress members. Added capitalize filter to capitalize names and first word of lists.

--- a/client/index.html
+++ b/client/index.html
@@ -39,8 +39,7 @@
 <script type='text/javascript' src='directives/directives.js'></script>
 <script type='text/javascript' src='components/search/byStateCtrl.js'></script>
 <script type='text/javascript' src='components/results/byStateResultsCtrl.js'></script>
-
-
+<script type='text/javascript' src='components/filters/filters.js'></script>
 
 </body>
 </html>
