--- a/client/index.html
+++ b/client/index.html
@@ -8,20 +8,27 @@
   <link rel="stylesheet" type="text/css" href="styles.css" />
 
 </head>
-<body ng-app="CongressionalStalker">
-<nav ng-controller='AuthCheck'>
+<body ng-app="CongressionalStalker" ng-controller='AuthCheck'>
+<nav>
     <div class="nav-wrapper">
       <a href="#!" class="brand-logo">Logo</a>
       <ul class="right hide-on-med-and-down">
+        <li ng-if='loginCheck()'><a href='#' data-activates='searches-nav' data-sidenav='right' data-menuwidth='150' data-closeonclick='true'>Previous Searches</a></li>
         <li><a ui-sref="register"><i class="fa fa-user left"></i>Register</a></li>
         <li ng-if='!loginCheck()'><a ui-sref="login"><i class="fa fa-sign-in left"></i>Login</a></li>
         <li ng-if="loginCheck()"><a ui-sref="logout"><i class="fa fa-sign-out left"></i>Logout</a></li>
       </ul>
     </div>
-  </nav>
-
+</nav>
 
 <div ui-view></div>
+
+<ul class='side-nav' id='searches-nav' class='searches-nav'>
+  <li ng-repeat='search in searchCache'>
+    <a href='' ng-click='getMemberAndVotes(search.name)'>{{nameCase(search.name)}}</a>
+    <div class='divider'></div>
+  </li>
+</ul>
 
 <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
 <script type="text/javascript" src="bower_components/Materialize/bin/materialize.js"></script>
