Hotfix for search validation

--- a/client/index.html
+++ b/client/index.html
@@ -6,12 +6,12 @@
   <link rel="stylesheet" type="text/css" href="bower_components/Materialize/bin/materialize.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="styles.css" />
-
+  <link href='https://fonts.googleapis.com/css?family=Creepster' rel='stylesheet' type='text/css'>
 </head>
 <body ng-app="CongressionalStalker" ng-controller='AuthCheck'>
 <nav>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">Logo</a>
+      <a href="#!" class="brand-logo">Congressional Stalker</a>
       <ul class="right hide-on-med-and-down">
         <li ng-if='loginCheck()'><a href='#' data-activates='searches-nav' data-sidenav='right' data-menuwidth='150' data-closeonclick='true'>Previous Searches</a></li>
         <li><a ui-sref="register"><i class="fa fa-user left"></i>Register</a></li>
