Added teamMembers. Made some minor tweaks in results page. Added spinner to searchByState page.

--- a/client/auth/logout.html
+++ b/client/auth/logout.html
@@ -1,1 +1,1 @@
-<h5 class='col s12 center-align'>You have been logged out. You'll be redirected to our home page in 3 seconds.</h5>
+<h5 class='col s12 center-align'>You have been logged out. You'll be redirected to our home page in {{timer}} seconds.</h5>
