--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>Discover how your Politicians have Voted!</title>
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Convergence' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="bower_components/Materialize/bin/materialize.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="styles.css" />
@@ -14,7 +16,7 @@
       <a href="#!" class="brand-logo">Congressional Stalker</a>
       <ul class="right hide-on-med-and-down">
         <li ng-if='loginCheck()'><a href='#' data-activates='searches-nav' data-sidenav='right' data-menuwidth='200' data-closeonclick='true'>Previous Searches</a></li>
-        <li><a ui-sref="register"><i class="fa fa-user left"></i>Register</a></li>
+        <li ng-if='!loginCheck()'><a ui-sref="register"><i class="fa fa-user left"></i>Register</a></li>
         <li ng-if='!loginCheck()'><a ui-sref="login"><i class="fa fa-sign-in left"></i>Login</a></li>
         <li ng-if="loginCheck()"><a ui-sref="logout"><i class="fa fa-sign-out left"></i>Logout</a></li>
       </ul>
